src/main/metadata/objects/Opportunity_SLA__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity SLA</relationshipLabel>
        <relationshipName>Opportunity_SLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Temperature__c</fullName>
        <label>Lead Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP', 
IF(ISPICKVAL($User.Market__c, 'TH'), 'TH', 
IF(ISPICKVAL($User.Market__c, 'MY'), 'MY', 
IF(ISPICKVAL($User.Market__c, 'IN'), 'IN',
IF(ISPICKVAL($User.Market__c, 'NZ'), 'NZ',
IF(ISPICKVAL($User.Market__c, 'TR'), 'TR',''))))))))</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_SLA_Time__c</fullName>
        <label>Opp SLA Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity SLA</relationshipLabel>
        <relationshipName>Opportunity_SLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA_Expired_Count__c</fullName>
        <label>SLA Expired Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Status__c</fullName>
        <label>SLA Status</label>
        <type>TextArea</type>
    </fields>
    <label>Opportunity SLA</label>
    <nameField>
        <displayFormat>OS-{00000}</displayFormat>
        <label>Opportunity SLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity SLA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>